feat: implement method to save dish