@@ -1,3 +1,4 @@
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
@@ -12,14 +13,26 @@ public class Main {
 //        System.out.println(dao.findIngredients(2, 2));
 //        System.out.println(dao.findIngredients(3, 5));
 //        System.out.println("--- createIngredients() ---");
-//        Ingredient fromage = new Ingredient("Fromage", CategoryEnum.DAIRY, 1200D);
-//        Ingredient oignon = new Ingredient("Oignon", CategoryEnum.VEGETABLE, 500D);
-//        Ingredient laitue = new Ingredient("Laitue", CategoryEnum.VEGETABLE, 2000D);
-//        Ingredient carotte = new Ingredient("Carotte", CategoryEnum.VEGETABLE, 500D);
-//        List<Ingredient> ingredientList1 = Arrays.asList(fromage, oignon);
-//        List<Ingredient> ingredientList2 = Arrays.asList(carotte, laitue);
+        Ingredient fromage = new Ingredient("Fromage", 1200D, CategoryEnum.DAIRY );
+        Ingredient oignon = new Ingredient("Oignon", 500D, CategoryEnum.VEGETABLE );
+        Ingredient laitue = new Ingredient("Laitue", 2000D, CategoryEnum.VEGETABLE );
+        Ingredient carotte = new Ingredient("Carotte", 500D, CategoryEnum.VEGETABLE );
+//        List<Ingredient> ingredientList1 = List.of(fromage, oignon);
+//        List<Ingredient> ingredientList2 = List.of(carotte, laitue);
 //
 //        System.out.println(dao.createIngredients(ingredientList1));
 //        System.out.println(dao.createIngredients(ingredientList2));
+        System.out.println("--- saveDish() ---");
+        Ingredient fromageWithId = new Ingredient(6, "Fromage", 1200D, CategoryEnum.DAIRY );
+        Ingredient oignonWithId = new Ingredient(7, "Oignon", 500D, CategoryEnum.VEGETABLE);
+        Ingredient laitueWithId = new Ingredient(1,"Laitue", 800D, CategoryEnum.VEGETABLE );
+        Ingredient tomateWithId = new Ingredient(2, "Tomate", 600D, CategoryEnum.VEGETABLE);
+
+        Dish soupeLegumes = new Dish("Soupe de légumes", DishTypeEnum.START, new ArrayList<>(List.of(oignonWithId)));
+//        System.out.println(dao.saveDish(soupeLegumes));
+        Dish saladeFraiche = new Dish(1, "Salade fraiche", DishTypeEnum.START, new ArrayList<>(List.of(oignonWithId, laitueWithId, fromageWithId, tomateWithId)));
+//        System.out.println(dao.saveDish(saladeFraiche));
+        Dish saladeFromage = new Dish(1, "Salade fraiche", DishTypeEnum.START, new ArrayList<>(List.of( fromageWithId)));
+        System.out.println(dao.saveDish(saladeFromage));
     }
 }
